<resources>
    <string name="app_name">UsersDB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pagina1_bienvenida">UsersDB</string>
    <string name="tit_pagina_principal">¡Gestiona los usuarios a tu gusto!</string>
    <string name="principal_boton_listar">LISTAR USUARIOS</string>
    <string name="principal_boton_insertar">INSERTAR USUARIOS</string>
    <string name="nacionalidad">Nacionalidad:</string>
    <string name="title_activity_insertar_usuarios">Nuevos usuarios</string>
    <string name="tit_insertar">Rellena el formulario para insertar nuevos usuarios</string>
    <string name="textSexo">Sexo</string>
    <string name="opcion_hombre">Hombre</string>
    <string name="opcion_mujer">Mujer</string>
    <string name="numero_usuarios">Numero de usuarios a insertar:</string>
    <string name="fecha_registro">Fecha de registro:</string>
    <string name="title_activity_listar_usuarios">Lista de usuarios</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_ejemplo">Mr. Mario Martín</string>
    <string name="fecha_registro_ejemplo">dd/mm/yyyy</string>
    <string name="genero">Género:</string>
    <string name="genero_ejemplo">M/F</string>
    <string name="nacionalidad_ph">ES,FR,GB,US,AU,BR,CA,CH,DE,DK,FI</string>
    <string name="numero_usuarios_ph">1, 2, 3...</string>
    <string name="usuario">Usuario:</string>
    <string name="usuario_ejemplo">mariete1024</string>
    <string name="password">Contraseña:</string>
    <string name="password_ejemplo">marl01234</string>
    <string name="title_activity_perfil_usuario">Perfil de usuario</string>
    <string name="datos_del_usuario">Datos del usuario:</string>
    <string name="localizaci_n">Localización:</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="texto_cambiar_usuario">Introduce el nuevo nombre de usuario</string>
    <string name="texto_cambiar_localizacion">Introduce la nueva localización del usuario</string>
    <string name="nuevo_usuario">Usuario</string>
    <string name="nueva_password">Contraseña</string>
    <string name="nueva_localizacion">Nueva dirección</string>
    <string name="texto_cambiar_password">Introduce la nueva contraseña del usuario</string>
    <string name="title_activity_autenticacion">Inicio de sesión / Registro</string>
    <string name="texto_autenticacion">Inserte su nombre de usuario y contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>

</resources>
