<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.practica_1.seguridaddismov.practica_1.insertar_usuarios"
    tools:showIn="@layout/activity_insertar_usuarios">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textoForm"
        android:text="@string/tit_insertar"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="#000207"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textNacionalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editNacionalidad"
        android:layout_below="@+id/textoForm"
        android:layout_marginTop="20dp"
        android:text="@string/nacionalidad"
        android:textColor="#57585b"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editNacionalidad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editNumeroUsuarios"
        android:layout_alignTop="@+id/textNacionalidad"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/nacionalidad_ph"
        android:inputType="text"
        android:textColor="#57585b" />

    <TextView
        android:id="@+id/textSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editNacionalidad"
        android:layout_below="@+id/editNacionalidad"
        android:layout_marginTop="20dp"
        android:text="@string/textSexo"
        android:textColor="#57585b"
        android:textSize="19sp" />

    <CheckBox
        android:id="@+id/radioHombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSexo"
        android:layout_alignStart="@+id/textSexo"
        android:layout_marginStart="17dp"
        android:text="@string/opcion_hombre" />

    <CheckBox
        android:id="@+id/radioMujer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioHombre"
        android:layout_alignBottom="@+id/radioHombre"
        android:layout_alignEnd="@+id/editNacionalidad"
        android:layout_marginEnd="61dp"
        android:text="@string/opcion_mujer" />

    <TextView
        android:id="@+id/textNumeroUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editNumeroUsuarios"
        android:layout_below="@+id/radioHombre"
        android:layout_marginTop="20dp"
        android:text="@string/numero_usuarios"
        android:textColor="#57585b"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editNumeroUsuarios"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editFechaRegistro"
        android:layout_alignTop="@+id/textNumeroUsuarios"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/numero_usuarios_ph"
        android:inputType="number"
        android:textColor="#57585b" />

    <TextView
        android:id="@+id/textFechaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editNumeroUsuarios"
        android:layout_below="@+id/editNumeroUsuarios"
        android:layout_marginTop="20dp"
        android:text="@string/fecha_registro"
        android:textColor="#57585b"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editFechaRegistro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textFechaRegistro"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/fecha_registro_ejemplo"
        android:inputType="date"
        android:textColor="#57585b" />

    <Button
        android:id="@+id/InsertarUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFechaRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:width="200dp"
        android:text="@string/boton1_pagina2" />

</RelativeLayout>
