<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nombreLista1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginStart="11dp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/nombre"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nombreLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nombreLista1"
        android:layout_alignBottom="@+id/nombreLista1"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/nombreLista1"
        android:text="@string/nombre_ejemplo"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/registroLista1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nombreLista1"
        android:layout_below="@+id/nombreLista1"
        android:textStyle="bold"
        android:text="@string/fecha_registro"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/registroLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registroLista1"
        android:layout_alignBottom="@+id/registroLista1"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/registroLista1"
        android:text="@string/fecha_registro_ejemplo"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/generoLista1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/registroLista1"
        android:layout_below="@+id/registroLista1"
        android:textStyle="bold"
        android:text="@string/genero"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/generoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/generoLista1"
        android:layout_alignBottom="@+id/generoLista1"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/generoLista1"
        android:text="@string/genero_ejemplo"
        android:textColor="#00040a"
        android:textSize="14sp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/registroLista"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/registroLista" />
</RelativeLayout>
